--- a/client-config.properties
+++ b/client-config.properties
@@ -1,1 +1,1 @@
-msg = Hello worlds - this is from config server - default profile
+msg = Hello world    - this is from config server - default profile
