--- a/client-config-development.properties
+++ b/client-config-development.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Development Environment
+msg = Hello world 2 - this is from config server - Development Environment
